<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/alarm_adapter_lineanr"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/box"
    android:layout_margin="@dimen/small_space"
    android:orientation="horizontal"
    android:weightSum="2">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/box"
        android:orientation="vertical"
        android:layout_weight="1"
        android:weightSum="8">
        <TextView
            android:id="@+id/adapter_name_alarm_txt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/app_name"
            android:textStyle="italic"
            android:layout_weight="4"
            android:paddingTop="@dimen/extra_space"
            android:paddingLeft="@dimen/extra_space"/>
        <TextView
            android:id="@+id/adapter_showtime_alarm_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="@dimen/medium_text"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_weight="4"/>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/box"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="10">
        <TextView
            android:id="@+id/adapter_2_txt"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/monday_of_week"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/extra_space"/>
        <TextView
            android:id="@+id/adapter_3_txt"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/tuestday_of_week"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/adapter_4_txt"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/wednesday_of_week"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/adapter_5_txt"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/thursday_of_week"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/adapter_6_txt"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/friday_of_week"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/adapter_7_txt"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/saturday_of_week"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/adapter_S_txt"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/sunday_of_week"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"/>
        <Switch
            android:id="@+id/adapter_active_swtch"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>